scaffold/typescript-go-main/testdata/baselines/reference/compiler/invocationErrorRecovery.errors.txt
index.ts(2,1): error TS2349: This expression is not callable.
  Type '{ default: () => void; }' has no call signatures.


==== foo.d.ts (0 errors) ====
    declare function foo(): void;
    declare namespace foo {}
    export = foo;
==== index.ts (1 errors) ====
    import * as foo from "./foo";
    foo()
    ~~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type '{ default: () => void; }' has no call signatures.
!!! related TS7038 index.ts:1:1: Type originates at this import. A namespace-style import cannot be called or constructed, and will cause a failure at runtime. Consider using a default import or import require here instead.
    